--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "name": "Netflix-UIE",
-  "version": "1.0.1",
-  "description": "VanillaJS plugin starter using Webpack",
+  "version": "1.0.0",
+  "description": "Netflix UIE Excercise",
   "main": "dist/index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
@@ -23,6 +23,8 @@
     "config": "^1.30.0",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
+    "eslint": "^5.6.0",
+    "eslint-loader": "2.1.0",
     "hapi": "^17.5.4",
     "html-webpack-plugin": "^3.2.0",
     "inert": "^5.1.0",
