--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "autoprefixer": "^8.5.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "8.2.6",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -24,7 +25,7 @@
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eslint": "^5.6.0",
-    "eslint-loader": "2.1.0",
+    "eslint-loader": "^2.1.0",
     "hapi": "^17.5.4",
     "html-webpack-plugin": "^3.2.0",
     "inert": "^5.1.0",
